--- a/assets/css/custom-flexslider.css
+++ b/assets/css/custom-flexslider.css
@@ -53,7 +53,7 @@
 #slider.flexslider .flex-viewport ul li img {
   object-fit: cover;
   max-width: 100%;
-  max-height: 90vh;
+  height: 90vh;
 }
 
 #carousel.flexslider .flex-viewport ul li img {
