--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,10 @@ footer .container-fluid.copyright {
   padding: 20px 0;
   color: #000;
 }
+footer .container-fluid.copyright .container .row {
+  display: flex;
+  align-items: center;
+}
 
 footer .container-fluid.desenvolvido {
   background-color: #e3e3e3;
@@ -429,7 +433,7 @@ input[name="search"] {
   font-family: "Kia-Medium";
   margin-bottom: 0;
 }
-.navbar a:not(.d-md-none){
+.navbar a:not(.d-md-none) {
   color: #000 !important;
 }
 
@@ -448,7 +452,7 @@ input[name="search"] {
 .btn--success {
   background-color: var(--kia-verde-btn-success) !important;
   border: 1px solid var(--kia-verde-btn-success) !important;
-  color: #fff!important;
+  color: #fff !important;
 }
 
 /* Custom button dark */
@@ -456,7 +460,7 @@ input[name="search"] {
 .btn--dark {
   background-color: #000 !important;
   border: 1px solid #000 !important;
-  color: #fff!important;
+  color: #fff !important;
 }
 .btn--dark:hover {
   color: #fff;
